# TestYTBot

./: OAuthCredentials.json  OLDOAuthCredentials.json  OLDclient_secrets.json  README.md  client_secrets.json  commands.py  credentials.py  keep_alive.py  main.py  pyproject.toml
Credentials/DPGBot3/: OAuthCredentials.json
Credentials/DPGBot4/: OAuthCredentials.json
Credentials/DPGLive/Live1/: client_secrets.json  credentials.py
Credentials/DPGLive/Live2/: client_secrets.json
DPGBot/: dpgbotcredentials.py
DPGBot 1 (credentials)/: OAuthCredentials.json
DPGBot3/: client_secrets.json
DPGBot4/: client_secrets.json
MainDPGBot/: dpgbotOAuthCredentials.json  dpgbot_client_secrets.json
Website/: index.html
