[tool.poetry]
name = "repl_python3_TestYTBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
oauth2client = "^4.1.3"
httplib2 = "^0.19.1"
google-api-python-client = "^2.2.0"
google-auth-oauthlib = "^0.4.4"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
